--- a/index.html
+++ b/index.html
@@ -27,25 +27,36 @@
 
     <main>
 
-      <section>
+
 
         <article>
-          <h3> 九州の伝統的工芸品品目</h3>
+          <p> 九州の伝統的工芸品品目</p>
           <p> 九州マップから工芸品を探す</p>
           <div class="img_block">
             <img src="images/map.png" width="430">
          </div>
+         <div id="menu">
+            <ul>
+             <li><a href="#">福岡県</a></li>
+             <li><a href="#">佐賀県</a></li>
+             <li><a href="#">長崎県</a></li>
+             <li><a href="#">熊本県</a></li>
+             <li><a href="#">大分県</a></li>
+             <li><a href="#">宮崎県</a></li>
+             <li><a href="#">鹿児島県</a></li>
+           </ul>
+         </div>
        </article>
 
 
-      </section>
+
 
 
 
     </main>
 
     <footer>
-      &copy; http://www.example.com
+      &copy; https://wangshuchan.github.io/-kyushu-traditional-crafts-/
     </footer>
 
   </div>
